fix z-index

--- a/webapp/css/app.css
+++ b/webapp/css/app.css
@@ -140,7 +140,6 @@ body {
 }
 
 .header .toggle.tasklists .tasklist {
-	z-index: 500;
 	min-height: 32px;
 	overflow: hidden;
 	margin-bottom: 5px;
@@ -331,7 +330,7 @@ body {
 	position: fixed;
 	bottom: 0;
 	right: 0;
-	z-index: 200;
+	z-index: 100;
 	padding: 3px;
 	background: rgba(255, 255, 255, 0.7);
 	color: dimgray;
@@ -384,7 +383,7 @@ body {
 	top: 0;
 	bottom: 0;
 	right: 0;
-	overflow-y: auto;
+	overflow: auto;
 	box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.3);
 }
 
